Up date version x2
heloo hello

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+<good morning>
 <!--
 	Verti by HTML5 UP
 	html5up.net | @ajlkn
@@ -6,13 +6,13 @@
 -->
 <html>
 	<head>
-		<title>Verti by HTML5 UP</title>
+		<title>Good morning</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="assets/css/pre.css" />
-		
-		<!-- uses google-code-prettify for syntax highlighting 
+
+		<!-- uses google-code-prettify for syntax highlighting
 			 see https://github.com/google/code-prettify for more info -->
 		<script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js">
 		</script>
@@ -22,13 +22,13 @@
 			<!-- Header -->
 				<div id="header-wrapper">
 					<header id="header" class="container">
-			
+
 						<!-- Logo -->
 							<div id="logo">
 								<h1><a href="index.html">Verti</a></h1>
 								<span>by HTML5 UP</span>
 							</div>
-			
+
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>
@@ -55,7 +55,7 @@
 									<li><a href="no-sidebar.html">No Sidebar</a></li>
 								</ul>
 							</nav>
-			
+
 					</header>
 				</div>
 
@@ -64,8 +64,8 @@
 					<div id="banner" class="box container">
 						<div class="row">
 							<div class="col-7 col-12-medium">
-								<h2>Hi. This is Verti.</h2>
-								<p>It's a free responsive site template by HTML5 UP</p>
+								<h2>Hi this is Kasia and Ben.</h2>
+								<p>It's so much fun doing that</p>
 							</div>
 							<div class="col-5 col-12-medium">
 								<ul>
@@ -76,13 +76,13 @@
 						</div>
 					</div>
 				</div>
-			
+
 			<!-- Features -->
 				<div id="features-wrapper">
 					<div class="container">
 						<div class="row">
 							<div class="col-4 col-12-medium">
-			
+
 								<!-- Box -->
 									<section class="box feature">
 										<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
@@ -94,10 +94,10 @@
 											<p>Phasellus quam turpis, feugiat sit amet in, hendrerit in lectus. Praesent sed semper amet bibendum tristique fringilla.</p>
 										</div>
 									</section>
-			
+
 							</div>
 							<div class="col-4 col-12-medium">
-			
+
 								<!-- Box -->
 									<section class="box feature">
 										<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
@@ -109,10 +109,10 @@
 											<p>Phasellus quam turpis, feugiat sit amet in, hendrerit in lectus. Praesent sed semper amet bibendum tristique fringilla.</p>
 										</div>
 									</section>
-			
+
 							</div>
 							<div class="col-4 col-12-medium">
-			
+
 								<!-- Box -->
 									<section class="box feature">
 										<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
@@ -124,18 +124,18 @@
 											<p>Phasellus quam turpis, feugiat sit amet in, hendrerit in lectus. Praesent sed semper amet bibendum tristique fringilla.</p>
 										</div>
 									</section>
-			
+
 							</div>
 						</div>
 					</div>
 				</div>
-			
+
 			<!-- Main -->
 				<div id="main-wrapper">
 					<div class="container">
 						<div class="row gtr-200">
 							<div class="col-4 col-12-medium">
-			
+
 								<!-- Sidebar -->
 									<div id="sidebar">
 										<section class="widget thumbnails">
@@ -151,10 +151,10 @@
 											<a href="#" class="button icon fa-file-alt">More</a>
 										</section>
 									</div>
-			
+
 							</div>
 							<div class="col-8 col-12-medium imp-medium">
-			
+
 								<!-- Content -->
 									<div id="content">
 										<section class="last">
@@ -165,7 +165,7 @@
 											<a href="#" class="button icon solid fa-arrow-circle-right">Continue Reading</a>
 										</section>
 									</div>
-			
+
 							</div>
 						</div>
 					</div>
@@ -176,7 +176,7 @@
 					<footer id="footer" class="container">
 						<div class="row">
 							<div class="col-3 col-6-medium col-12-small">
-			
+
 								<!-- Links -->
 									<section class="widget links">
 										<h3>Random Stuff</h3>
@@ -188,10 +188,10 @@
 											<li><a href="#">Nullam scelerisque blandit leo</a></li>
 										</ul>
 									</section>
-			
+
 							</div>
 							<div class="col-3 col-6-medium col-12-small">
-			
+
 								<!-- Links -->
 									<section class="widget links">
 										<h3>Random Stuff</h3>
@@ -203,10 +203,10 @@
 											<li><a href="#">Nullam scelerisque blandit leo</a></li>
 										</ul>
 									</section>
-			
+
 							</div>
 							<div class="col-3 col-6-medium col-12-small">
-			
+
 								<!-- Links -->
 									<section class="widget links">
 										<h3>Random Stuff</h3>
@@ -218,13 +218,13 @@
 											<li><a href="#">Nullam scelerisque blandit leo</a></li>
 										</ul>
 									</section>
-			
+
 							</div>
 							<div class="col-3 col-6-medium col-12-small">
-			
+
 								<!-- Contact -->
 									<section class="widget contact last">
-										<h3>Contact Us</h3>
+										<h3>Contact Me -Kasia</h3>
 										<ul>
 											<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 											<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
@@ -236,7 +236,7 @@
 										Nashville, TN 00000<br />
 										(800) 555-0000</p>
 									</section>
-			
+
 							</div>
 						</div>
 						<div class="row">
